fixed css on SO page so that dates fit on smaller screens

--- a/sass/gladbooks.scss
+++ b/sass/gladbooks.scss
@@ -462,6 +462,12 @@ td {
 	background-color: white;
 }
 
+.ponumber,
+.socomment {
+	white-space: pre;
+	width: 10em;
+}
+
 .price,
 .total,
 .xml-debit ,
